2010-12-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	backcompat6.test: avoid comments inside recipe commands.
	* tests/backcompat6.test: Remove shell comments from makefile rule
	commands, as they are not portable to (at least) Tru64 make.

2010-12-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	man8.test: avoid comments inside recipe commands.
	* tests/man8.test: Remove shell comments from makefile rule
	commands, as they are not portable to (at least) Tru64 make.

2010-12-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix sed-related buglet in test "subdir5.test"
	* tests/subdir5.test: Always terminate text passed to the
	`i' sed command with a newline, to work around limitations
	in e.g. older OpenBSD sed.

2010-12-21  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix spurious failures in tests on AC_CONFIG_AUX_DIR.
	* tests/auxdir7.test: Do not try to needlessly overwrite the files
	`install-sh' and `missing'.  This avoid spurious failures in "make
	distcheck", when those files might be copied as read-only from the
	`lib' directory.
	* tests/auxdir8.test: Likewise.

2010-12-18  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Make test 'posixsubst-script' portable to MinGW/MSYS.
	* tests/posixsubst-script.test: Ensure that the generated dummy
	scripts really start with a shebang line, to work around a
	limitation of 'test -x' on MinGW/MSYS.
	Reported by Ralf Wildenhues.

	Improve comments in tests `posixsubst*.test'.
	* tests/posixsubst-data.test: Improve comment explaining why we
	try also empty match suffix.
	* tests/posixsubst-extradist.test: Likewise.
	* tests/posixsubst-ldadd.test: Likewise.
	* tests/posixsubst-libraries.test: Likewise.
	* tests/posixsubst-ltlibraries.test: Likewise.
	* tests/posixsubst-programs.test: Likewise.
	* tests/posixsubst-scripts.test: Likewise.
	* tests/posixsubst-sources.test: Likewise.
	* tests/posixsubst-tests.test: Likewise.
	Suggested by Ralf Wildenhues.
