@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2006  Free Software Foundation, Inc.
+# Copyright (C) 2006, 2010 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -27,9 +27,6 @@ END
 
 mkdir sub
 
-# These two Makefile contain the same errors, but have different
-# warnings disabled.
-
 cat >Makefile.am <<END
 if COND
 AUTOMAKE_OPTIONS = -Wall
@@ -38,4 +35,6 @@ END
 
 $ACLOCAL
 AUTOMAKE_fails
-grep 'Makefile.am:2.*AUTOMAKE_OPTIONS.*conditional' stderr
+grep '^Makefile\.am:2.*AUTOMAKE_OPTIONS.*conditional' stderr
+
+:
