@@ -1,5 +1,11 @@
 2010-12-21  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Minor improvements to test 'amopts.test'.
+	* tests/amopts.test: Remove botched comment.  Make grepping of
+	automake stderr slighty stricter.  Add trailing `:' command.
+
+2010-12-21  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	backcompat6.test: avoid comments inside recipe commands.
 	* tests/backcompat6.test: Remove shell comments from makefile rule
 	commands, as they are not portable to (at least) Tru64 make.
